--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,14 @@
-.main-box{
-    width: 640px;
-    background-color: rgb(122, 122, 224);
-    
+.title-cont {
+  box-sizing: border-box;
+  position: fixed;
+  bottom: 10vh;
+  width: 60vw;
+  border: solid violet 2px;
+  border-radius: 1vw;
+  margin-left: 20vw;
+  margin-right: 20vw;
 }
-h1 {height: 100px;
-width: 700;
-color: rgb(20, 5, 9);
-padding-left: 190px;
-padding-top: 70px;
+.title-cont__title {
+  text-align: center;
+  font-size: calc(16px + 0.04 * (100vw - 400px));
 }
