--- a/css/style.css
+++ b/css/style.css
@@ -56,3 +56,37 @@
   top: 55vh;
   background-color: chartreuse;
 }
+
+.result-container {
+  position: fixed;
+  width: 80vw;
+  height: 50vh;
+  left: 10vw;
+  top: 10vh;
+}
+
+.player-score {
+  display: block;
+  position: fixed;
+  width: 10vw;
+  height: 10vw;
+  top: 75vh;
+  left: 30vw;
+  background-color: rgb(0, 234, 255);
+  font-size: 10vw;
+  line-height: 1;
+  text-align: center;
+}
+
+.comp-score {
+  display: block;
+  position: fixed;
+  width: 10vw;
+  height: 10vw;
+  top: 75vh;
+  left: 60vw;
+  background-color: rgb(0, 234, 255);
+  font-size: 10vw;
+  line-height: 1;
+  text-align: center;
+}
