--- a/css/style.css
+++ b/css/style.css
@@ -2,19 +2,19 @@
   box-sizing: border-box;
 }
 
-body {
+/* body {
   position: fixed;
   border: chartreuse 2px dashed;
-}
+} */
 
 .main-container {
-  /* position: absolute; */
+  position: relative;
   width: 90vw;
-  height: 90vh;
+  height: 80vh;
   border: solid black 5px;
   border-radius: 2vw;
   left: 5vw;
-  top: 5vh;
+  top: 8vh;
 }
 
 .title-cont {
@@ -37,10 +37,11 @@ body {
 
 .rock-container {
   position: absolute;
-  width: 26vw;
-  height: 26vw;
-  left: 37vw;
-  top: 15vh;
+  width: 30%;
+  height: 15%;
+  transform: translateX(-50%);
+  left: 50%;
+  top: 5%;
   background-image: url(../images/rock.png);
   background-size: cover;
   border-radius: 50%;
@@ -48,10 +49,11 @@ body {
 
 .paper-container {
   position: absolute;
-  width: 26vw;
-  height: 26vw;
-  left: 37vw;
-  top: 35vh;
+  width: 30%;
+  height: 15%;
+  transform: translateX(-50%);
+  left: 50%;
+  top: 25%;
   background-image: url(../images/paper.png);
   background-size: cover;
   border-radius: 50%;
@@ -59,10 +61,11 @@ body {
 
 .scissors-container {
   position: absolute;
-  width: 26vw;
-  height: 26vw;
-  left: 37vw;
-  top: 55vh;
+  width: 30%;
+  height: 15%;
+  transform: translateX(-50%);
+  left: 50%;
+  top: 45%;
   background-image: url(../images/scissors.png);
   background-size: cover;
   border-radius: 50%;
@@ -70,19 +73,21 @@ body {
 
 .result-container {
   position: absolute;
-  width: 80vw;
-  height: 50vh;
-  left: 10vw;
-  top: 10vh;
+  width: 100%;
+  height: 55%;
+  left: 0;
+  top: 0;
 }
 
 .player-score {
-  display: block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   position: absolute;
-  width: 10vw;
-  height: 10vw;
-  top: 75vh;
-  left: 30vw;
+  width: 20%;
+  height: 10%;
+  top: 65%;
+  left: 20%;
   background-color: rgb(0, 234, 255);
   font-size: 10vw;
   line-height: 1;
@@ -90,12 +95,14 @@ body {
 }
 
 .comp-score {
-  display: block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   position: absolute;
-  width: 10vw;
-  height: 10vw;
-  top: 75vh;
-  left: 60vw;
+  width: 20%;
+  height: 10%;
+  top: 65%;
+  left: 70%;
   background-color: rgb(0, 234, 255);
   font-size: 10vw;
   line-height: 1;
