--- a/css/style.css
+++ b/css/style.css
@@ -2,28 +2,27 @@
   box-sizing: border-box;
 }
 
-/* body {
-  position: fixed;
-  border: chartreuse 2px dashed;
-} */
+body {
+  margin: 0;
+}
 
 .main-container {
   position: relative;
-  width: 90vw;
-  height: 80vh;
+  width: 100vw;
+  height: 95vh;
   border: solid black 5px;
   border-radius: 2vw;
-  left: 5vw;
-  top: 8vh;
+
+  top: 2vh;
 }
 
 .title-cont {
   position: absolute;
-  bottom: 8vh;
+  bottom: 1vh;
   width: 60vw;
   border: solid violet 2px;
   border-radius: 1vw;
-  margin-left: 15vw;
+  margin-left: 20vw;
 }
 .title-cont__title {
   text-align: center;
@@ -86,8 +85,8 @@
   position: absolute;
   width: 20%;
   height: 10%;
-  top: 65%;
-  left: 20%;
+  top: 75%;
+  left: 15%;
   background-color: rgb(0, 234, 255);
   font-size: 10vw;
   line-height: 1;
@@ -101,8 +100,8 @@
   position: absolute;
   width: 20%;
   height: 10%;
-  top: 65%;
-  left: 70%;
+  top: 75%;
+  right: 15%;
   background-color: rgb(0, 234, 255);
   font-size: 10vw;
   line-height: 1;
