--- a/sass/_style.scss
+++ b/sass/_style.scss
@@ -9,7 +9,7 @@ body {
 .main-container {
   position: relative;
   width: 100vw;
-  height: 91vh;
+  // height: 91vh;
   border: solid black 5px;
   border-radius: 2vw;
   top: 1vh;
