--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,7 @@ body {
 .main-container {
   position: relative;
   width: 100vw;
+  height: 91vh;
   border: solid black 5px;
   border-radius: 2vw;
   top: 1vh;
@@ -72,7 +73,7 @@ body {
 .result-container {
   position: absolute;
   width: 100%;
-  height: 60%;
+  height: 55%;
   left: 0;
   top: 0;
 }
